--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
@@ -27,10 +27,13 @@
 }
 
 .logout_box{
+	transition: 0.3s;
+	margin-top: 20px;
 	text-align: center;
 }
 
 .logout_box button{
+	transition: 0.3s;
 	height: 30px;
 	background-color: #FFDE59;
 	font-family: 'GangwonEdu_OTFBoldA';
