--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mydiary.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mydiary.css
@@ -10,22 +10,63 @@
 }
 
 .mypage_mydiary_chart{
-	border: 1px solid black;
 	width: 1100px;
 	height: 400px;
+	background-color: white;
+	border-radius: 5px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 	margin: 0 auto;
 }
 
 .mypage_mydiary_follower{
-	border: 1px solid black;
 	width: 1100px;
-	height: 200px;
+	height: 250px;
 	margin: 15px auto;
 }
 
 .mypage_mydiary_follower_title{
+	display: block;
+}
+
+#mypage_mydiary_scroll{
+	height: 200px; 
+	width: 1100px; 
+	overflow-y: scroll; 
+	margin: 0 auto;
+}
+
+#mypage_mydiary_scroll::-webkit-scrollbar{
+	width: 6px;
+}
+
+#mypage_mydiary_scroll::-webkit-scrollbar-thumb{
+	height: 10%;
+	background-color: #ffce0d;
+	border-radius: 10px;
+}
+
+#mypage_mydiary_scroll::-webkit-scrollbar-track{
+	background-color: white;
+	border-radius: 10px;
+}
+
+.mypage_mydiary_follower_title span{
+	display: inline-block;
 	font-family: 'GangwonEdu_OTFBoldA';
 	font-size: 15pt;
+	color: #6667AB;
+	border-bottom: 3px solid #6667AB;
+	padding-bottom: 5px;
+		
+}
+
+.mypage_mydiary_list{
+	display: inline-block;
+	border: 1px solid black;
+	width: 80px;
+	height: 80px;
+	margin: 15px;
+	cursor: pointer;
 }
 
 .mypage_mydiary_follower_img{
