--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -514,7 +514,7 @@ details > summary::maker{
 .hero-img-wrapper {
   position: relative;
   overflow: hidden;
-  width: 100%;
+  width: 380px;
   height: 100%;
   flex-shrink: 0;
   /* border-radius: 4px; */
@@ -530,7 +530,7 @@ details > summary::maker{
 .owl-carousel {
   position: relative;
   width: 100%;
-  height: 370px;
+  height: 450px;
   display: flex;
   align-items: center;
   padding-top: 32px;
@@ -697,3 +697,54 @@ details > summary::maker{
 .contextmenu li:hover a {
   color: #FFFFFF;
 }
+
+.introduce-backImg {
+	width: 150px;
+	height: 50px;
+	z-index: 8888;
+	position: fixed;
+	margin-left: 380px;
+	margin-top: -130px;
+}
+
+.introduce-backImg-text {
+	z-index: 9999;
+	position: fixed;
+	margin-left: 450px;
+	margin-top: -350px;
+}
+
+.turntable-backImg {
+	z-index: 9998;
+	position: fixed;
+	width: 180px;
+	height: 180px;
+	margin-left: 410px;
+	margin-top: -320px;
+}
+
+.turntable-backImg:hover {
+  /* background-color: pink;
+  box-shadow: 4px 0px 4px 0px rgba(222, 222, 222, 0.3); */
+}
+
+.airplane-backImg {
+	z-index: 9999;
+	position: fixed;
+	margin-left: 560px;
+	margin-top: -260px;
+	width: 150px;
+	height: 140px;
+}
+
+.ticket-backImg {
+	z-index: 9996;
+	position: fixed;
+	margin-left: 400px;
+	margin-top: -190px;
+}
+
+ /* .diaryinfo-img {
+	position: fixed;
+	z-index: 9999;
+} */
