[mj] 아이디 클릭 시 바로가기 생성

--- a/HoliDiary/src/main/webapp/resources/mj_css/postDetail.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/postDetail.css
@@ -46,3 +46,21 @@
 	float: right;
 }
 
+.commentName {
+	cursor: pointer;
+}
+
+.popupLayer {
+	position: absolute;
+	display: none;
+	background-color: #ffffff;
+	border: solid 2px #d0d0d0;
+	width: 350px;
+	height: 150px;
+	padding: 10px;
+}
+.popupLayer div {
+	position: absolute;
+	top: 5px;
+	right: 5px
+}
