--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -23,6 +23,7 @@ body {
   background: linear-gradient(to top, #FFDE59, #5D5FB2); /*배경 색깔*/
 }
 
+
 @media screen and (max-width: 900px) {
   body {
     padding: 0;
@@ -154,6 +155,7 @@ details > summary::-webkit-details-marker {
   background-position: center right;
   background-repeat: no-repeat;
   background-size: 16px;
+  margin-top: 10px;
 }
 
 
@@ -679,6 +681,7 @@ details > summary::maker{
 .contextmenu li {
   border-left: 3px solid transparent;
   transition: ease .2s;
+  
 }
 
 .contextmenu li a {
@@ -687,11 +690,13 @@ details > summary::maker{
   color: #B0BEC5;
   text-decoration: none;
   transition: ease .2s;
+  
 }
 
 .contextmenu li:hover {
   background: #bebebe;
   border-left: 3px solid #707070;
+
 }
 
 .contextmenu li:hover a {
@@ -708,10 +713,13 @@ details > summary::maker{
 }
 
 .introduce-backImg-text {
-	z-index: 9999;
+	z-index: 9000;
 	position: fixed;
-	margin-left: 450px;
-	margin-top: -350px;
+	margin-left: 430px;
+	margin-top: -270px;
+	text-align: center;
+	font-family: 'KCC-eunyoung';
+	font-size: 17pt;
 }
 
 .turntable-backImg {
@@ -733,8 +741,8 @@ details > summary::maker{
 	position: fixed;
 	margin-left: 560px;
 	margin-top: -260px;
-	width: 150px;
-	height: 140px;
+	width: 130px;
+	height: 130px;
 }
 
 .ticket-backImg {
@@ -744,7 +752,44 @@ details > summary::maker{
 	margin-top: -190px;
 }
 
- /* .diaryinfo-img {
+.diaryinfo-img {
 	position: fixed;
 	z-index: 9999;
-} */
+	width: 30px;
+	height: 30px;
+	margin-left: 0px;
+	margin-top: -15px;
+} 
+
+.question-backImg {
+	position: fixed;
+	z-index: 9999;
+	width: 20px;
+	height: 30px;
+	margin-left: 700px;
+	margin-top: -455px;
+}
+
+@font-face {
+    font-family: 'KCC-eunyoung';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/KCC-eunyoung-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.advice_logo_img {
+	height: 30%;
+}
+
+input[type=file]::file-selector-button {
+  width: 150px;
+  height: 30px;
+  background: #fff;
+  border: 1px solid #4d4d4d;
+  border-radius: 10px;
+  cursor: pointer;
+}
+input[type=file]::file-selector-button:hover {
+  background: #4d4d4d;
+  color: #fff;
+}
