--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
@@ -14,6 +14,10 @@
   width: 200px; 
 }
 
+.login_btn_a a:hover{
+	color: #fffaf4;	
+}
+
 .after_login_box{
   text-align: center;
   margin-left: 45px;
@@ -27,13 +31,12 @@
 }
 
 .logout_box{
-	transition: 0.3s;
+  transition: 0.3s;
 	margin-top: 20px;
 	text-align: center;
 }
 
 .logout_box button{
-	transition: 0.3s;
 	height: 30px;
 	background-color: #FFDE59;
 	font-family: 'GangwonEdu_OTFBoldA';
