--- a/HoliDiary/src/main/webapp/resources/mj_css/likeButton.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/likeButton.css
@@ -24,19 +24,26 @@
 	position: relative;
 	/* z-index: 10; */
 	margin-left: -25px;
-	margin-top: 80px;
+	margin-top: 100px;
 	/*transform: translate(-50%, -50%);*/
 	float: left;
 }
 
 .like_result {
+	font-family: "DM Sans", sans-serif;
 	display: absolute;
-	margin-left: 100px;
+	margin-left: 90px;
 	font-size: 12pt;
-	margin-top: 45px;
+	margin-top: 35px;
 	z-index: 200;
 	cursor: pointer;
+	height: 30px;
+	width: 35px;
+	padding: 10px 25px 25px 15px;
+	background-color: #e3e3e3;
+	border-radius: 10px;
 }
+
 
 #rightSide {
 	margin-top: 100px;
