--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -246,7 +246,8 @@ details > summary::maker{
   padding: 8px;
   font-size: 13px;
   line-height: 20px;
-  width: 70px;
+  width: 50px;
+  height: 30px;
 }
 
 .btn-img-upload {
@@ -792,4 +793,68 @@ input[type=file]::file-selector-button {
 input[type=file]::file-selector-button:hover {
   background: #4d4d4d;
   color: #fff;
+}
+
+/* ---------------라디오버튼----------------- */
+.checks {
+	position: relative;
+}
+
+.checks input[type="radio"] {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	border: 0;
+}
+
+.checks input[type="radio"]+label {
+	display: inline-block;
+	position: relative;
+	padding-left: 30px;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+}
+
+.checks input[type="radio"]+label:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: -4px;
+	width: 21px;
+	height: 21px;
+	text-align: center;
+	background: #fafafa;
+	border: 1px solid #cacece;
+	border-radius: 100%;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px
+		rgba(0, 0, 0, 0.05);
+}
+
+.checks input[type="radio"]+label:active:before, .checks input[type="radio"]:checked+label:active:before
+	{
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px
+		rgba(0, 0, 0, 0.1);
+}
+
+.checks input[type="radio"]:checked+label:before {
+	background: #E9ECEE;
+	border-color: #adb8c0;
+}
+
+.checks input[type="radio"]:checked+label:after {
+	content: '';
+	position: absolute;
+	top: 1px;
+	left: 5px;
+	width: 13px;
+	height: 13px;
+	background: #99a1a7;
+	border-radius: 100%;
+	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
