--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
@@ -31,17 +31,17 @@
 }
 
 .logout_box{
-  transition: 0.3s;
 	margin-top: 20px;
 	text-align: center;
 }
 
 .logout_box button{
+  transition: 0.3s;
 	height: 30px;
-	background-color: #FFDE59;
+	background-color: transparent;
 	font-family: 'GangwonEdu_OTFBoldA';
 	font-size: 15pt;
-	color: #6667AB;
+	color:#FFDE59;
 	border-radius: 10px;
 	border: none;
 	cursor: pointer;
@@ -193,6 +193,7 @@
 }
 
 .missing_user_a{
+	
 	display: inline-block;
 	border-bottom: 2px solid #6667AB;
 	margin-left: 5px;
