--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -764,11 +764,19 @@ details > summary::maker{
 
 .question-backImg {
 	position: fixed;
-	z-index: 9999;
+	z-index: 5555;
 	width: 20px;
 	height: 30px;
-	margin-left: 700px;
-	margin-top: -455px;
+	margin-left: 690px;
+	margin-top: -220px;
+}
+
+.question-backImg2 {
+	position: fixed;
+	z-index: 9999;
+	height: 160px;
+	margin-left: 610px;
+	margin-top: -490px;
 }
 
 @font-face {
@@ -857,4 +865,25 @@ input[type=file]::file-selector-button:hover {
 	background: #99a1a7;
 	border-radius: 100%;
 	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+/* -----------날씨 api------------ */
+#weatherArea {
+	position: absolute;
+	opacity: 1;
+	transition: opacity 0.3s ease-out;	
+	font-family: "DM Sans", sans-serif;
+	font-size: 10pt;
+	box-shadow: 0px 0px 20px #c2c2c2;
+	font-weight: 900;
+	border-radius: 20px;
+	z-index: 10000;
+	text-align: center;
+	display: none;
+	color: white;
+	padding: 0px 5px 0px 5px;
+}
+
+#weatherArea td {
+	padding: 5px;
 }
