--- a/HoliDiary/src/main/webapp/resources/mj_css/mj_write.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/mj_write.css
@@ -3,19 +3,19 @@ body {
 }
 
 .write-map-Btn {
-	background-color: #7d7d7d;
+	background-color: #6667AB;
 	border: none;
 	color: #fff;
 	border-radius: 10px;
 	padding: 8px;
 	font-size: 13px;
 	line-height: 20px;
-	width: 125px;
+	width: 145px;
 	text-align: center;
 	margin: 0 auto;
 	margin-top: 5px;
 	margin-bottom: -5px;
-	margin-right: 10px;
+	margin-right: 0px;
 	display:block; 
 	z-index: 0;
 }
@@ -26,13 +26,15 @@ body {
 
 .writeUpload{
 	font-family: "DM Sans", sans-serif;
-	background-color: #7d7d7d;
+	background-color: #6667AB;
 	border: none;
 	color: #fff;
 	border-radius: 10px;
 	font-size: 12px;
 	line-height: 20px;
 	margin: 0 auto;
+	height: 40px;
+	width: 70px;
 }
 
 .writeCancel{
@@ -44,6 +46,8 @@ body {
 	font-size: 12px;
 	line-height: 20px;
 	margin: 0 auto;
+	height: 40px;
+	width: 70px;
 }
 
 .row justify-content-md-center{
