--- a/HoliDiary/src/main/webapp/resources/mj_css/postList.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/postList.css
@@ -121,8 +121,8 @@ body {
 }
 
 /* ---------------셀렉트 박스----------------- */
-select {
-	width: 80px;
+#cntPerPage {
+	width: 110px;
 	height: 30px;
 	border: 1px solid #999;
 	font-family: inherit;
@@ -134,6 +134,6 @@ select {
 	text-align: center;
 }
 
-select::-ms-expand {
+#cntPerPage::-ms-expand {
 	    display: none;
 }
