[mj] commit for pull

--- a/HoliDiary/src/main/webapp/resources/mj_css/postList.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/postList.css
@@ -46,6 +46,9 @@ body {
 
 .postTitle {
 	text-decoration: none;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .postTitle>a {
