--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -77,13 +77,7 @@ body {
 	height: 26px;
 }
 
-.search_box {
-	margin-left: 750px;
-	margin-top: 100px;
-	width: 200px;
-	height: 50px;
-	display: flex;
-}
+
 
 .search_input {
 	width: 150px;
@@ -163,6 +157,13 @@ body {
 	line-height: 23px;
 }
 
+.search_box {
+	margin-left: 722px;
+	margin-top: 100px;
+	width: 200px;
+	height: 50px;
+	display: flex;
+}
 } 
 
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
@@ -181,7 +182,7 @@ body {
 }
 
 .search_box {
-    margin-left: 530px;
+    margin-left: 450px;
     margin-top: 105px;
     width: 200px;
     height: 50px;
@@ -239,7 +240,18 @@ body {
 
 /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
 @media all and (max-width:767px) {
-	
+	.quick_home_button {
+	text-decoration: none;
+	padding: 10px 15px 10px 15px;
+	height: 50px;
+	background-color: #6667AB;
+	color: #FFDE59;
+	position: relative;
+	top: 50px;
+	left: 10px;
+	border-radius: 10px;
+	font-family: 'Montserrat';
+}
   .header_contents_box {
 	width: 767px;
 	margin-left: auto;
@@ -247,7 +259,7 @@ body {
 	display: flex;
 }
 .search_box {
-    margin-left: 320px;
+    margin-left: 210px;
     margin-top: 60px;
     width: 200px;
     height: 50px;
