--- a/HoliDiary/src/main/webapp/resources/jp_kjs_css/kjs_find_user.css
+++ b/HoliDiary/src/main/webapp/resources/jp_kjs_css/kjs_find_user.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
 
 #content_find_user{
 	position: relative;
@@ -27,14 +28,14 @@
 
 .find_id_go_login a{
 	text-decoration: none;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 10pt;
 	color: #6667AB;
 }
 
 .find_id_go_find_pw{
 	display: inline-block;
-	margin-left: 180px;
+	margin-left: 130px;
 	margin-top: 10px;
 	height: 30px;
 	text-align: center;
@@ -42,8 +43,8 @@
 
 .find_id_go_find_pw a{
 	text-decoration: none;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 10pt;
 	color: #6667AB;
 }
 
@@ -70,12 +71,12 @@
 
 #find_id_valid{
 	position: absolute;
-	width: 200px;
+	display: inline-block;
 	height: 30px;
 	top: 50%;
 	left: 50%;
 	margin-left: -100px;	
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	font-size: 13pt;
 	color: red;
 }
@@ -88,7 +89,7 @@
 	left: 50%;
 	margin-left: -125px;	
 	margin-top: -30px;
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	font-size: 15pt;
 	color: blue;
 }
@@ -101,8 +102,8 @@
 	left: 50%;
 	margin-left: -125px;	
 	margin-top: -10px;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 12pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 9pt;
 	color: red;
 }
 
@@ -153,8 +154,9 @@
 .find_id_btn_box button{
 	width: 100%;
 	height: 100%;
-	font-size: 15pt;
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 12pt;
+	font-weight: 600;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	background-color: #6667AB;
 	color: white;
 	cursor: pointer;
@@ -182,8 +184,8 @@
 
 .find_pw_go_login a{
 	text-decoration: none;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 10pt;
 	color: #6667AB;
 }
 
@@ -198,8 +200,8 @@
 
 .find_id_go_find_id a{
 	text-decoration: none;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 10pt;
 	color: #6667AB;
 }
 
@@ -225,12 +227,13 @@
 }
 
 .find_pw_error_box span{
-	width: 150px;
+	width: 300px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin-left: -75px;
-	font-family: 'GangwonEdu_OTFBoldA';
+	margin-left: -150px;
+	text-align:center;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	font-size: 13pt;
 }
 
@@ -283,8 +286,9 @@
 .find_pw_btn_box button{
 	width: 100%;
 	height: 100%;
-	font-size: 15pt;
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 12pt;
+	font-weight: 600;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	background-color: #6667AB;
 	color: white;
 	cursor: pointer;
@@ -307,8 +311,8 @@
 
 .find_pw_result_go_login a{
 	text-decoration: none;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 10pt;
 	color: #6667AB;
 }
 
@@ -319,8 +323,8 @@
 }
 
 .find_pw_result_info span{
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 15pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-size: 12pt;
 }
 
 .find_pw_result_go_find_id{
@@ -333,8 +337,8 @@
 .find_pw_result_go_find_id button{
 	width: 100%;
 	height: 100%;
-	font-size: 15pt;
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 12pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	background-color: #6667AB;
 	color: white;
 	cursor: pointer;
@@ -351,8 +355,8 @@
 .find_pw_result_go_find_pw button{
 	width: 100%;
 	height: 100%;
-	font-size: 15pt;
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 11pt;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	background-color: #6667AB;
 	color: white;
 	cursor: pointer;
@@ -360,7 +364,7 @@
 }
 
 .find_pw_result_email{
-	font-family: 'GangwonEdu_OTFBoldA';
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	color: red;
 
 }
